--- a/Regresion_sklearn.ipynb
+++ b/Regresion_sklearn.ipynb
@@ -3858,7 +3858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3871,7 +3871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3944,7 +3944,7 @@
        "4    Country Manager      5  110000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3960,25 +3960,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1],\n",
-       "       [ 2],\n",
-       "       [ 3],\n",
-       "       [ 4],\n",
-       "       [ 5],\n",
-       "       [ 6],\n",
-       "       [ 7],\n",
-       "       [ 8],\n",
-       "       [ 9],\n",
-       "       [10]])"
+       "0.9973922891706614"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3988,7 +3979,7 @@
     "X_poly = poly_reg.fit_transform(X)\n",
     "lin_reg = LinearRegression()\n",
     "lin_reg.fit(X_poly, y)\n",
-    "X"
+    "lin_reg.score(X_poly,y)"
    ]
   },
   {
